--- a/templates/index.pug
+++ b/templates/index.pug
@@ -2,6 +2,22 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    title Sample
+    meta(http-equiv="X-UA-Compatible" content="IE=edge")
+    meta(name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no")
+    title BF Life Counter
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/10up-sanitize.css/3.2.0/sanitize.min.css")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" data-viewport-units-buggyfill="ignore")
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Play" data-viewport-units-buggyfill="ignore")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.slim.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/viewport-units-buggyfill/0.6.0/viewport-units-buggyfill.js")
   body
-    h1 Sample
+    .flex-container
+      .side.side1
+        .contents
+          include main_counter.pug
+          include sub_counter.pug
+      .side.side2
+        .contents
+          include main_counter.pug
+          include sub_counter.pug
