--- a/templates/main_counter.pug
+++ b/templates/main_counter.pug
@@ -1,14 +1,14 @@
 .main.counter
-  .count 10
-  .flex-container
-    .col-xs-4.btn-group-vertical
-      button.diff-btn.btn.btn-plus(data-diff="1") +1
-      button.diff-btn.btn.btn-minus(data-diff="-1") -1
-    .col-xs-4.btn-group-vertical
-      button.diff-btn.btn.btn-plus(data-diff="2") +2
-      button.diff-btn.btn.btn-minus(data-diff="-2") -2
-    .col-xs-4.btn-group-vertical
-      button.diff-btn.btn.btn-plus(data-diff="3") +3
-      button.diff-btn.btn.btn-minus(data-diff="-3") -3
-  a.reset-btn
+  .main_count.count 10
+  .main_buttons.flex-container
+    .main_buttonCol
+      button.main_button.diffButton.diffButton-plus(data-diff="1") +1
+      button.main_button.diffButton.diffButton-minus(data-diff="-1") -1
+    .main_buttonCol
+      button.main_button.diffButton.diffButton-plus(data-diff="2") +2
+      button.main_button.diffButton.diffButton-minus(data-diff="-2") -2
+    .main_buttonCol
+      button.main_button.diffButton.diffButton-plus(data-diff="3") +3
+      button.main_button.diffButton.diffButton-minus(data-diff="-3") -3
+  a.main_resetButton.resetButton
     i.fa.fa-refresh(aria-hidden="true")
