--- a/templates/index.pug
+++ b/templates/index.pug
@@ -5,6 +5,8 @@ html
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no")
     title BF Life Counter
+    link(rel="shortcut icon" href="icon.png")
+    link(rel="apple-touch-icon" href="icon.png")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous" data-viewport-units-buggyfill="ignore")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Play" data-viewport-units-buggyfill="ignore")
   body.page
